--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <h1>ヘブライ仮名</h1>
           ヘブライ語を仮名文字として使う、日本語の文章の執筆環境です。<br>
           対応するアルファベットを入力すると、上のボックスに文字が追加されます。<br>
+          日本語で書きたくない日本語の文章を書くために作りました。<br>
           例：「初めてのヘブライ語」→ HJMTNHBRIG
         </div>
         <script src="vue.js"></script>
